--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,6 @@ h4 {
   position: relative;
   max-width: 1200px;
   padding: 10px;
-  min-width: 420px;
 }
 
 .introduction {
@@ -97,7 +96,7 @@ h4 {
   position: relative;
   /*background-color: aquamarine;*/
   display: block;
-  padding-right: 30px;
+  /* padding-right: 30px; */
 }
 
 .about-text-wrapper {
@@ -425,7 +424,8 @@ footer p {
   }
 
   .name {
-    font-size: 31px;
+    font-size: 26px;
+    font-family: PoppinsMedium;
   }
 
   .project-wrapper {
@@ -455,6 +455,11 @@ footer p {
 
   .contact {
     width: 100%;
+  }
+
+  .first p {
+    font-size: 20px;
+    font-weight: bold;
   }
 
   .second p {
