--- a/css/style.css
+++ b/css/style.css
@@ -175,26 +175,38 @@ h4 {
   justify-content: space-evenly;
 }
 
+.project-wrapper:nth-of-type(even) {
+  flex-direction: row-reverse;
+}
+
 /* .project-wrapper-box-pri {
   box-shadow: 15px 15px 10px var(--primary-color);
 } */
 
 .project-summarize {
-  width: 40%;
+  width: 45%;
   height: auto;
   padding: 30px;
 }
 
 .project-contribute {
-  width: 60%;
+  width: 55%;
   height: auto;
   padding: 30px;
-  font-family: PoppinsMedium;
 }
 
 .work-contribute {
   width: 100%;
   height: 60%;
+}
+
+.work-contribute p {
+  font-weight: 300;
+  font-family: PoppinsMedium;
+}
+
+.fa-solid {
+  color: #333;
 }
 
 .img-blog {
@@ -209,13 +221,21 @@ h4 {
 .img-blog > img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 .proj-desc {
+  display: flex;
+  margin: auto 0;
   text-align: center;
   width: 100%;
   height: 40%;
+  justify-content: center;
+}
+
+.proj-desc p {
+  margin: auto 0;
+  text-align: center;
 }
 
 .proj-desc-box-pri {
@@ -229,7 +249,7 @@ h4 {
 .proj-skills {
   /* display: flex; */
   width: 100%;
-  height: 50%;
+  /* height: 50%; */
   /* background-color: var(--secondary-color); */
   margin: auto 0;
   text-align: left;
@@ -239,7 +259,7 @@ h4 {
   display: inline-flex;
   border-radius: 57px;
   height: auto;
-  width: 95px;
+  /* width: 95px; */
   margin: 5px;
   padding: 5px;
   justify-content: center;
@@ -256,6 +276,7 @@ h4 {
 .proj-skill-tag > img {
   width: 20px;
   height: 20px;
+  margin: auto 0;
 }
 
 .skills-container p {
@@ -429,8 +450,10 @@ footer p {
   }
 
   .project-wrapper {
-    display: inline-flex;
+    display: inline-block;
     font-size: smaller;
+    height: auto;
+    width: 100%;
   }
   /** Project */
 
@@ -441,7 +464,12 @@ footer p {
   }
 
   .project-contribute {
+    width: auto;
     padding: 15px;
+  }
+
+  .work-contribute h4 {
+    float: inline-start;
   }
 
   .proj-skill-tag {
