--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 :root {
   --primary-color: #f7eddb;
-  --secondary-color: #dae2b6; /** light: #dae2b6 dark:#ccd6a6*/
-  --project-box-color: #f6e3c5; /** light:#f7eddb */
+  --secondary-color: #dae2b6;
+  --project-box-color: #f6e3c5;
   --text-color: #333333;
   --section-title-color: #25323d;
-  --section-title-font-size: 34px;
+  --section-title-font-size: 43px;
 }
 
 * {
@@ -18,7 +18,7 @@
 }
 
 section {
-  margin: 50px 0;
+  margin: 0 0 50px 0;
 }
 
 @font-face {
@@ -50,13 +50,6 @@ h4 {
   font-size: 16px;
 }
 
-.border-pri-color {
-  border: 1px solid var(--primary-color);
-}
-
-.border-second-color {
-  border: 1px solid var(--secondary-color);
-}
 
 .container {
   display: block;
@@ -72,18 +65,15 @@ h4 {
   width: 100%;
   margin-top: 30px;
   justify-content: space-between;
-  background: linear-gradient(
-    to bottom,
-    white 0%,
-    white 30%,
-    var(--primary-color) 30%,
-    var(--primary-color) 100%
-  );
+  background: linear-gradient(to bottom,
+      white 0%,
+      white 30%,
+      var(--primary-color) 30%,
+      var(--primary-color) 100%);
   padding-bottom: 100px;
 }
 
 .profile-pic-wrapper {
-  /*background-color: antiquewhite;*/
   margin: auto 30px;
 }
 
@@ -94,9 +84,7 @@ h4 {
 
 .about {
   position: relative;
-  /*background-color: aquamarine;*/
   display: block;
-  /* padding-right: 30px; */
 }
 
 .about-text-wrapper {
@@ -105,10 +93,11 @@ h4 {
 }
 
 .name {
-  font-size: var(--section-title-font-size);
+  font-size: 37px;
   color: var(--section-title-color);
   font-weight: bold;
 }
+
 .position {
   font-size: 22px;
   font-family: PoppinsMedium;
@@ -124,8 +113,6 @@ h4 {
   overflow-x: scroll;
   display: flex;
   margin: -38px auto 0 auto;
-
-  /* width: fit-content; */
 }
 
 .skill-info-wrapper {
@@ -147,7 +134,6 @@ h4 {
   width: 100px;
   height: auto;
   border-radius: 40px;
-  /* box-shadow: 0 10px 10px #a5c9ca; */
   box-shadow: 0 10px 10px var(--secondary-color);
   margin-bottom: 50px;
 }
@@ -170,18 +156,24 @@ h4 {
   display: inline-flex;
   width: 100%;
   margin: 30px auto;
-  /* box-shadow: 15px 15px 10px var(--secondary-color); */
   height: 400px;
   justify-content: space-evenly;
+  border: 1px solid var(--primary-color);
 }
 
-.project-wrapper:nth-of-type(even) {
+.project-wrapper:nth-of-type(odd) {
   flex-direction: row-reverse;
+  border: 1px solid var(--secondary-color);
 }
 
-/* .project-wrapper-box-pri {
-  box-shadow: 15px 15px 10px var(--primary-color);
-} */
+.project-wrapper:nth-of-type(odd) .img-blog {
+  border: 1px solid var(--secondary-color);
+
+}
+
+.project-wrapper:nth-of-type(odd) .proj-skill-tag {
+  box-shadow: 10px 10px 8px var(--secondary-color);
+}
 
 .project-summarize {
   width: 45%;
@@ -216,12 +208,13 @@ h4 {
   text-align: center;
   margin: 0 auto;
   box-sizing: border-box;
+  border: 1px solid var(--primary-color);
 }
 
-.img-blog > img {
+.img-blog>img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .proj-desc {
@@ -231,6 +224,11 @@ h4 {
   width: 100%;
   height: 40%;
   justify-content: center;
+  box-shadow: 4px 4px 10px 3px var(--primary-color);
+}
+
+.project-wrapper:nth-of-type(odd) .proj-desc {
+  box-shadow: 4px 4px 10px 3px var(--secondary-color);
 }
 
 .proj-desc p {
@@ -238,19 +236,9 @@ h4 {
   text-align: center;
 }
 
-.proj-desc-box-pri {
-  box-shadow: 4px 4px 10px 3px var(--primary-color);
-}
-
-.proj-desc-box-second {
-  box-shadow: 4px 4px 10px 3px var(--secondary-color);
-}
 
 .proj-skills {
-  /* display: flex; */
   width: 100%;
-  /* height: 50%; */
-  /* background-color: var(--secondary-color); */
   margin: auto 0;
   text-align: left;
 }
@@ -259,21 +247,14 @@ h4 {
   display: inline-flex;
   border-radius: 57px;
   height: auto;
-  /* width: 95px; */
   margin: 5px;
   padding: 5px;
   justify-content: center;
-}
-
-.proj-skill-tag-pri {
   box-shadow: 10px 10px 8px var(--primary-color);
 }
 
-.proj-skill-tag-second {
-  box-shadow: 10px 10px 8px var(--secondary-color);
-}
 
-.proj-skill-tag > img {
+.proj-skill-tag>img {
   width: 20px;
   height: 20px;
   margin: auto 0;
@@ -306,7 +287,7 @@ h4 {
 }
 
 .c-sharp {
-  width: 65%;
+  width: 68%;
   height: inherit;
   background-color: #ee6983;
 }
@@ -341,6 +322,18 @@ h4 {
   background-color: #e4aec5;
 }
 
+.ajax {
+  width: 30%;
+  height: inherit;
+  background-color: #1cd6ce;
+}
+
+.vue {
+  width: 27%;
+  height: inherit;
+  background-color: #ffcc8f;
+}
+
 .contact {
   width: 840px;
   height: 180px;
@@ -355,10 +348,6 @@ h4 {
   margin: auto 0;
 }
 
-.first,
-.second {
-  /* min-height: 200px; */
-}
 .first {
   text-align: center;
   width: 35%;
@@ -367,6 +356,7 @@ h4 {
   display: flex;
   justify-content: center;
 }
+
 .shaped {
   width: 7%;
   float: left;
@@ -455,6 +445,7 @@ footer p {
     height: auto;
     width: 100%;
   }
+
   /** Project */
 
   .project-summarize {
