--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,29 @@ h4 {
   padding: 10px;
 }
 
+.lang {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  right: 50px;
+  top: 50px;
+}
+
+.lang span {
+  /* color: var(--secondary-color); */
+  font-size: 20px;
+  margin-right: 3px;
+}
+
+.lang a {
+  /* color: var(--primary-color); */
+  z-index: 999;
+}
+
+.lang a:hover {
+  opacity: 0.8;
+}
+
 .introduction {
   display: flex;
   width: 100%;
@@ -189,7 +212,6 @@ h4 {
 
 .work-contribute {
   width: 100%;
-  height: 60%;
 }
 
 .work-contribute p {
@@ -414,6 +436,11 @@ footer p {
     font-size: 14px;
   }
 
+  .lang {
+    right: 0px;
+  }
+
+
   .introduction {
     display: block;
   }
@@ -466,6 +493,11 @@ footer p {
   .proj-skill-tag {
     width: auto;
     font-size: smaller;
+  }
+
+  .proj-skill-tag label {
+    display: inline-flex;
+    align-items: center;
   }
 
   .skills-container {
